# rt_image_classification

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  meson.build  rebuild_model.sh
src/: application.cpp  application.h  main.cpp  model.cpp  model.h
